--- a/Launch Screen.storyboard
+++ b/Launch Screen.storyboard
@@ -22,12 +22,19 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mn splash" translatesAutoresizingMaskIntoConstraints="NO" id="gMO-ye-Uqf">
+                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" symbolic="YES" id="SfN-ll-jLj"/>
-                            <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
+                            <constraint firstItem="gMO-ye-Uqf" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="0hR-7v-HXw"/>
+                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="-20" id="A8K-TO-i6P"/>
+                            <constraint firstItem="gMO-ye-Uqf" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="HhN-1l-nCH"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="-14" id="MNv-SP-6A5"/>
+                            <constraint firstItem="gMO-ye-Uqf" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="87" id="V0D-91-ONE"/>
+                            <constraint firstItem="gMO-ye-Uqf" firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="e3F-zh-JFc"/>
+                            <constraint firstItem="gMO-ye-Uqf" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="340" id="jse-uZ-f8P"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
@@ -37,4 +44,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="mn splash" width="512" height="512"/>
+    </resources>
 </document>
